--- a/dixon.html
+++ b/dixon.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>Rama de Dixon</h1>
+    <button onclick="saluda()">Clíckeame</button>
     
 </body>
 </html>
+
+<script>
+    function saluda(){
+        alert("Hola soy la segunda feature del Dixon")
+    }
+
+</script>
