--- a/dixon.html
+++ b/dixon.html
@@ -15,6 +15,6 @@
 
 <script>
   function saluda() {
-    alert("Hola soy la segunda feature del Dixon");
+    alert('Hola soy la segunda feature del Dixon');
   }
 </script>
