--- a/dixon.html
+++ b/dixon.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="assets/styles.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
     <h1>Rama de Dixon</h1>
-    <button onclick="saluda()">Clíckeame</button>
+    <button type="button" class="btn btn-primary" onclick="saluda()">Clíckeame</button>
   </body>
 </html>
 
